# Tokometer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  Taskfile.yml  index.html  package-lock.json  package.json  release-please-config-beta.json  release-please-config.json  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
e2e/: settings-window.e2e.mjs
src/: animations.ts  api.ts  axolotl.ts  cat.ts  graph.ts  history.test.ts  history.ts  main.ts  mascots.ts  mock.ts  rate.test.ts  rate.ts  settings.css  settings.ts  splash.ts  styles.css  thresholds.ts  trend.test.ts  trend.ts  usage.test.ts  usage.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  history.rs  lib.rs  main.rs  poller.rs  state.rs  tray.rs  trayicon.rs  update.rs  usage.rs
tools/: convert_animations.mjs  convert_mascot.mjs  gen_icons.mjs
