[package]
name = "tokometer"
version = "1.2.0" # x-release-please-version
description = "A tray widget that keeps your AI coding-agent usage in sight"
edition = "2021"

[lib]
name = "tokometer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api backs the transparent window on macOS (matches macOSPrivateApi in tauri.conf.json).
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pure-Rust glyph rasterizer for the two-line text tray icon (cross-platform).
ab_glyph = "0.2"
# native-tls (schannel) so corporate root CAs in the Windows cert store work
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["time", "sync"] }

[target.'cfg(windows)'.dependencies]
# Raising a pinned widget back above the taskbar needs a raw SetWindowPos
# (tao no-ops set_always_on_top when the flag is unchanged).
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
] }
